--- a/04-deployment/streaming/requirements.txt
+++ b/04-deployment/streaming/requirements.txt
@@ -1,5 +1,7 @@
 functions-framework
 google-cloud-pubsub
 mlflow
-scikit-learn
+scikit-learn==1.3.2
 google-cloud-storage
+psutil==5.9.7
+numpy==1.26.2
