--- a/05-monitoring/docker-compose.yml
+++ b/05-monitoring/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_PASSWORD=example
+      POSTGRES_PASSWORD: example
     ports:
       - "5432:5432"
     networks:
@@ -34,6 +34,8 @@ services:
       - "3000:3000"
     volumes:
       - ./config/grafana_datasources.yaml:/etc/grafana/provisioning/datasources/datasource.yaml:ro
+      - ./config/grafana_dashboards.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml:ro
+      - ./dashboards:/opt/grafana/dashboards
     networks:
       - back-tier
       - front-tier
